Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.11, 11.4, 12.0(EOL), 11.8
Description
--source include/have_innodb.inc
|
|
|
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB; |
CREATE OR REPLACE TABLE t1 (x INT) ENGINE=INNODB KEY_BLOCK_SIZE=16 ; |
SET GLOBAL innodb_buffer_pool_size=5242880; |
Leads to:
|
CS 12.0.1 51c0afcd248ad57095fdcf56efec2865ea49bd83 (Debug) Build 07/05/2025 |
mariadbd: /test/12.0_dbg/storage/innobase/buf/buf0buddy.cc:678: buf_block_t *buf_buddy_shrink(buf_page_t *, buf_block_t *): Assertion `i < (srv_page_size_shift - 10U)' failed.
|
|
CS 12.0.1 51c0afcd248ad57095fdcf56efec2865ea49bd83 (Debug) Build 07/05/2025 |
Core was generated by `/test/MD070525-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-defaults --max'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
|
|
[Current thread is 1 (LWP 2352457)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x00007ad0aa64527e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x00007ad0aa6288ff in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x00007ad0aa62881b in __assert_fail_base (fmt=0x7ad0aa7d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x57bdb9d3014d "i < (srv_page_size_shift - 10U)", file=file@entry=0x57bdb9d30087 "/test/12.0_dbg/storage/innobase/buf/buf0buddy.cc", line=line@entry=678, function=function@entry=0x57bdb9d301be "buf_block_t *buf_buddy_shrink(buf_page_t *, buf_block_t *)") at ./assert/assert.c:96
|
#6 0x00007ad0aa63b517 in __assert_fail (assertion=0x57bdb9d3014d "i < (srv_page_size_shift - 10U)", file=0x57bdb9d30087 "/test/12.0_dbg/storage/innobase/buf/buf0buddy.cc", line=678, function=0x57bdb9d301be "buf_block_t *buf_buddy_shrink(buf_page_t *, buf_block_t *)") at ./assert/assert.c:105
|
#7 0x000057bdb9836970 in buf_buddy_shrink (bpage=0x7accb80120c0, block=0x0)at /test/12.0_dbg/storage/innobase/buf/buf0buddy.cc:678
|
#8 0x000057bdb9700aa5 in buf_pool_t::shrink (this=0x57bdba5b0e80 <buf_pool>, size=6291456) at /test/12.0_dbg/storage/innobase/buf/buf0buf.cc:1718
|
#9 0x000057bdb9702b3d in buf_pool_t::resize (this=0x57bdba5b0e80 <buf_pool>, size=6291456, thd=0x7ab1b4000d58)at /test/12.0_dbg/storage/innobase/buf/buf0buf.cc:2073
|
#10 0x000057bdb93df79f in innodb_buffer_pool_size_update (thd=0x7ab1b4000d58, save=0x7ab1b401a098)at /test/12.0_dbg/storage/innobase/handler/ha_innodb.cc:3689
|
#11 0x000057bdb8bc9cd0 in sys_var_pluginvar::global_update (this=0x57bdbe49b240, thd=0x7ab1b4000d58, var=0x7ab1b401a078)at /test/12.0_dbg/sql/sql_plugin.cc:3691
|
#12 0x000057bdb8a423ea in sys_var::update (this=0x57bdbe49b240, thd=0x7ab1b4000d58, var=0x7ab1b401a078)at /test/12.0_dbg/sql/set_var.cc:211
|
#13 0x000057bdb8a44704 in set_var::update (this=0x7ab1b401a078, thd=0x7ab1b4000d58) at /test/12.0_dbg/sql/set_var.cc:871
|
#14 0x000057bdb8a44248 in sql_set_variables (thd=0x7ab1b4000d58, var_list=0x7ab1b4006130, free=true) at /test/12.0_dbg/sql/set_var.cc:752
|
#15 0x000057bdb8b95d33 in mysql_execute_command (thd=0x7ab1b4000d58, is_called_from_prepared_stmt=false) at /test/12.0_dbg/sql/sql_parse.cc:4859
|
#16 0x000057bdb8b89b34 in mysql_parse (thd=0x7ab1b4000d58, rawbuf=0x7ab1b4019ee0 "SET GLOBAL innodb_buffer_pool_size=5242880", length=42, parser_state=0x7ad0a45b2a10)at /test/12.0_dbg/sql/sql_parse.cc:7891
|
#17 0x000057bdb8b86f08 in dispatch_command (command=COM_QUERY, thd=0x7ab1b4000d58, packet=0x7ab1b400b259 "SET GLOBAL innodb_buffer_pool_size=5242880", packet_length=42, blocking=true) at /test/12.0_dbg/sql/sql_parse.cc:1877
|
#18 0x000057bdb8b8a6e3 in do_command (thd=0x7ab1b4000d58, blocking=true)at /test/12.0_dbg/sql/sql_parse.cc:1416
|
#19 0x000057bdb8d75bd9 in do_handle_one_connection (connect=0x57bdbe828008, put_in_cache=true) at /test/12.0_dbg/sql/sql_connect.cc:1414
|
#20 0x000057bdb8d7597e in handle_one_connection (arg=0x57bdbe90ceb8)at /test/12.0_dbg/sql/sql_connect.cc:1326
|
#21 0x00007ad0aa69caa4 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
|
#22 0x00007ad0aa729c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
|
|
Bug Detection Matrix |
Rel o/d Build Commit UniqueID observed
|
CS 10.5 dbg 280425 c461188ca6ad6ec3a54201eb87ebd75797d296df No bug found
|
CS 10.5 opt 280425 c461188ca6ad6ec3a54201eb87ebd75797d296df No bug found
|
CS 10.6 dbg 280425 19644f6821d59ecca0f9b1f44fadb3b887061965 No bug found
|
CS 10.6 opt 280425 19644f6821d59ecca0f9b1f44fadb3b887061965 No bug found
|
CS 10.11 dbg 280425 4d41ec081e34671a1997ce797dcb9f7b7997437e i < (srv_page_size_shift - 10U)|SIGABRT|buf_buddy_shrink|buf_pool_t::shrink|buf_pool_t::resize|innodb_buffer_pool_size_update
|
CS 10.11 opt 280425 4d41ec081e34671a1997ce797dcb9f7b7997437e No bug found
|
CS 11.4 dbg 090525 da5a4d05b9da58705498a42b6ffa5d9211f446af i < (srv_page_size_shift - 10U)|SIGABRT|buf_buddy_shrink|buf_pool_t::shrink|buf_pool_t::resize|innodb_buffer_pool_size_update
|
CS 11.4 opt 090525 da5a4d05b9da58705498a42b6ffa5d9211f446af No bug found
|
CS 11.8 dbg 220425 805e7ca3adef50e17889ea17a1b86da6c3fb8580 i < (srv_page_size_shift - 10U)|SIGABRT|buf_buddy_shrink|buf_pool_t::shrink|buf_pool_t::resize|innodb_buffer_pool_size_update
|
CS 11.8 opt 220425 805e7ca3adef50e17889ea17a1b86da6c3fb8580 No bug found
|
CS 12.0 dbg 070525 51c0afcd248ad57095fdcf56efec2865ea49bd83 i < (srv_page_size_shift - 10U)|SIGABRT|buf_buddy_shrink|buf_pool_t::shrink|buf_pool_t::resize|innodb_buffer_pool_size_update
|
CS 12.0 opt 070525 51c0afcd248ad57095fdcf56efec2865ea49bd83 No bug found
|
ES 10.5 dbg 050525 0d368ec0042a81d9549fc939fb742f82350b20ab No bug found
|
ES 10.5 opt 050525 0d368ec0042a81d9549fc939fb742f82350b20ab No bug found
|
ES 10.6 dbg 050525 6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62 No bug found
|
ES 10.6 opt 050525 6111fbaf7bdcb6f1170f556ffd05d6e1a4159f62 No bug found
|
ES 11.4 dbg 050525 9cd12544ebfd0d52d2158af66b5aced58121cf1f No bug found
|
ES 11.4 opt 050525 9cd12544ebfd0d52d2158af66b5aced58121cf1f No bug found
|
Attachments
Issue Links
- is caused by
-
MDEV-29445 reorganise innodb buffer pool (and remove buffer pool chunks)
-
- Closed
-